# nats-news-analysis

./: .env  .env-example  .gitattributes  .gitignore  LICENSE  Makefile  architecture.drawio  compose-build.yml  compose-obs.yml  compose.override.yml  compose.yml  docker-bake.hcl  docker-compose-decommissioned.yml  docker-compose.build.yml  docker-compose.override.yml  docker-compose.yml  index.de.md  index.en.md  readme.md  trending.sql
.devcontainer/: compose.yml  devcontainer.json  postCreate.sh
.roo/: mcp.json
bash/: Dockerfile  compose.yml  feed-urls.json  feed.sh
go-services/: Dockerfile  Makefile  go.mod  go.sum
golang/: Dockerfile  Makefile  compose.yml  go.mod  go.sum  readme.md
grafana/: grafana-datasources.yml
keyword-matcher-go/: Dockerfile  Makefile  compose.yml  docker-compose.yml  go.mod  go.sum
keyword-matcher-python/: .gitignore  Config.py  Dockerfile  Keywords.py  NATS.py  README.md  RSSFullText.py  Utils.py  docker-compose.yml  keywords.txt  nats-news-keyword-matcher.py  requirements.txt
loadbalancer/: docker-compose.yml  nginx.conf
notebooks/: 00-trends.ipynb  01-news-pulse.ipynb  02-source-landscape.ipynb  03-language-mix.ipynb  04-phrase-tracker.ipynb  05-vocabulary-growth.ipynb  06-signal-health.ipynb  07-pattern-scatter.ipynb  Dockerfile  pyproject.toml  simple-counts.sql  trending.sql
python/: Dockerfile  Makefile  ai_search.http  ai_search.py  compose.yml  config.py  index.py  mcp-server.py  model.py  nats-indexer.py  pyproject.toml  rest_server.py  search-mcp-server.py  search.py
python/static/: index.html
(+161 files in other folders)
